--- a/1.Practice/Day 1.ipynb
+++ b/1.Practice/Day 1.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "cad7ca58",
    "metadata": {
     "ExecuteTime": {
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b90150d2",
    "metadata": {
     "ExecuteTime": {
@@ -61,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2c04c428",
    "metadata": {
     "ExecuteTime": {
@@ -77,6 +77,15 @@
       "Rank of t :  1\n",
       "Shape of t :  (7,)\n"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
+     ]
     }
    ],
    "source": [
@@ -86,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "eb400b02",
    "metadata": {
     "ExecuteTime": {
@@ -102,6 +111,15 @@
       "t[0] t[1] t[-1]=  0.0 1.0 6.0\n",
       "t[2:5] t[4:-1] =  [2. 3. 4.] [3. 4. 5.]\n",
       "t[:2] t[3:]    =  [0. 1.] [3. 4. 5. 6.]\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -130,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "f261be96",
    "metadata": {
     "ExecuteTime": {
@@ -148,6 +166,15 @@
       " [ 7.  8.  9.]\n",
       " [10. 11. 12.]]\n"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
+     ]
     }
    ],
    "source": [
@@ -157,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "c47f356a",
    "metadata": {
     "ExecuteTime": {
@@ -172,6 +199,15 @@
      "text": [
       "Rank of t :  2\n",
       "Shape of t:  (4, 3)\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -198,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "17b6ff99",
    "metadata": {
     "ExecuteTime": {
@@ -212,6 +248,15 @@
      "output_type": "stream",
      "text": [
       "tensor([0., 1., 2., 3., 4., 5., 6.])\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -265,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "id": "a0425b1b",
    "metadata": {
     "ExecuteTime": {
@@ -284,6 +329,15 @@
       "tensor(0.) tensor(1.) tensor(6.)\n",
       "tensor([2., 3., 4.]) tensor([4., 5.])\n",
       "tensor([0., 1.]) tensor([3., 4., 5., 6.])\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -306,7 +360,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "b3f3737f",
    "metadata": {
     "ExecuteTime": {
@@ -332,6 +386,15 @@
       "        [ 4.,  5.],\n",
       "        [ 7.,  8.],\n",
       "        [10., 11.]])\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -364,7 +427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "f498ddd2",
    "metadata": {
     "ExecuteTime": {
@@ -385,6 +448,15 @@
       "torch.Size([1, 1, 2])\n",
       "torch.Size([1, 2])\n",
       "tensor([[5., 5.]])\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -413,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "e0b9701b",
    "metadata": {
     "ExecuteTime": {
@@ -429,6 +501,15 @@
       "tensor([[4., 5.]])\n",
       "torch.Size([1, 2])\n"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
+     ]
     }
    ],
    "source": [
@@ -441,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "10a83cd7",
    "metadata": {
     "ExecuteTime": {
@@ -457,6 +538,15 @@
       "tensor([[4., 5.],\n",
       "        [5., 6.]])\n",
       "torch.Size([2, 2])\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -493,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "id": "aa2cf4e3",
    "metadata": {},
    "outputs": [
@@ -513,6 +603,15 @@
       "        [6., 8.]])\n",
       "m1.matmul(m2) =  tensor([[ 5.],\n",
       "        [11.]])\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -564,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "3576b77d",
    "metadata": {},
    "outputs": [
@@ -573,6 +672,15 @@
      "output_type": "stream",
      "text": [
       "tensor(1.5000)\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -583,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "id": "718d1df9",
    "metadata": {},
    "outputs": [
@@ -592,6 +700,15 @@
      "output_type": "stream",
      "text": [
       "mean(): could not infer output dtype. Input dtype must be either a floating point or complex dtype. Got: Long\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -615,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "id": "24cbb2e9",
    "metadata": {},
    "outputs": [
@@ -625,6 +742,15 @@
      "text": [
       "tensor([[1., 2.],\n",
       "        [3., 4.]])\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -643,7 +769,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "id": "a70bb47d",
    "metadata": {},
    "outputs": [
@@ -655,6 +781,15 @@
       "tensor([2., 3.])\n",
       "tensor([1.5000, 3.5000])\n",
       "tensor([1.5000, 3.5000])\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -701,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "id": "d0b40bd7",
    "metadata": {},
    "outputs": [
@@ -711,6 +846,15 @@
      "text": [
       "tensor([[1., 2.],\n",
       "        [3., 4.]])\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -722,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": null,
    "id": "f3571e49",
    "metadata": {},
    "outputs": [
@@ -734,6 +878,15 @@
       "tensor([4., 6.])\n",
       "tensor([3., 7.])\n",
       "tensor([3., 7.])\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -754,7 +907,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "70755a61",
    "metadata": {},
    "outputs": [
@@ -764,6 +917,15 @@
      "text": [
       "tensor([[1., 2.],\n",
       "        [3., 4.]])\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -783,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "50a91b6d",
    "metadata": {},
    "outputs": [
@@ -792,6 +954,15 @@
      "output_type": "stream",
      "text": [
       "tensor(4.)\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -810,7 +981,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "1b5435ae",
    "metadata": {},
    "outputs": [
@@ -822,6 +993,15 @@
       "values=tensor([3., 4.]),\n",
       "indices=tensor([1, 1]))\n"
      ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
+     ]
     }
    ],
    "source": [
@@ -830,7 +1010,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "d909ed65",
    "metadata": {},
    "outputs": [
@@ -840,9 +1020,17 @@
      "text": [
       "Max:  tensor([3., 4.])\n",
       "Max:  tensor([2., 4.])\n",
-      "Argmax:  tensor([3., 4.])\n",
       "Argmax:  tensor([1, 1])\n",
       "Argmax:  tensor([1, 1])\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -855,7 +1043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "e8a9ab10",
    "metadata": {},
    "outputs": [
@@ -867,9 +1055,18 @@
        "indices=tensor([1, 1]))"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
+     ]
     }
    ],
    "source": [
@@ -881,52 +1078,37 @@
    "execution_count": null,
    "id": "b77a65dd",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.return_types.max(\n",
+      "values=tensor([2., 4.]),\n",
+      "indices=tensor([1, 1]))\n",
+      "torch.return_types.max(\n",
+      "values=tensor([2., 4.]),\n",
+      "indices=tensor([1, 1]))\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
+     ]
+    }
+   ],
+   "source": [
+    "print(t.max(dim=1))\n",
+    "print(t.max(dim=-1))"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94424177",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "59ea4893",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "16506572",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd1d115e",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e3a0962d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
    "id": "344bbcee",
    "metadata": {},
    "outputs": [
@@ -942,6 +1124,15 @@
       "  (2): Conv2d(20, 64, kernel_size=(5, 5), stride=(1, 1))\n",
       "  (3): ReLU()\n",
       ")\n"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mnotebook controller is DISPOSED. \n",
+      "\u001b[1;31m자세한 내용은 Jupyter <a href='command:jupyter.viewOutput'>로그</a>를 참조하세요."
      ]
     }
    ],
@@ -972,22 +1163,6 @@
     "print(out.shape)\n",
     "print(minsu)\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "26a7ebd4",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8019b999",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
