--- a/lab-02_linear_regression.ipynb
+++ b/lab-02_linear_regression.ipynb
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,11 +564,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LinearRegressionModel(\n",
+      "  (linear): Linear(in_features=1, out_features=1, bias=True)\n",
+      ")\n",
+      "<generator object Module.parameters at 0x1478337b0>\n",
+      "<generator object Module.parameters at 0x1478337b0>\n"
+     ]
+    }
+   ],
    "source": [
-    "model = LinearRegressionModel()"
+    "model = LinearRegressionModel()\n",
+    "print(model)\n",
+    "print(model.parameters())\n",
+    "print(model.parameters(recurse=True))"
    ]
   },
   {
@@ -587,7 +602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -596,16 +611,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.0739],\n",
-      "        [0.5891],\n",
-      "        [1.1044]], grad_fn=<ThAddmmBackward>)\n"
+      "tensor([[-0.3233],\n",
+      "        [-1.1231],\n",
+      "        [-1.9229]], grad_fn=<AddmmBackward0>)\n"
      ]
     }
    ],
@@ -629,16 +644,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([[0.0739],\n",
-      "        [0.5891],\n",
-      "        [1.1044]], grad_fn=<ThAddmmBackward>)\n",
+      "tensor([[-0.3233],\n",
+      "        [-1.1231],\n",
+      "        [-1.9229]], grad_fn=<AddmmBackward0>)\n",
       "tensor([[1.],\n",
       "        [2.],\n",
       "        [3.]])\n"
@@ -652,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,14 +676,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(2.1471, grad_fn=<MseLossBackward>)\n"
+      "tensor(11.9132, grad_fn=<MseLossBackward0>)\n"
      ]
     }
    ],
@@ -692,11 +707,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "SGD (\n",
+      "Parameter Group 0\n",
+      "    dampening: 0\n",
+      "    differentiable: False\n",
+      "    foreach: None\n",
+      "    lr: 0.01\n",
+      "    maximize: False\n",
+      "    momentum: 0\n",
+      "    nesterov: False\n",
+      "    weight_decay: 0\n",
+      ")\n"
+     ]
+    }
+   ],
    "source": [
-    "optimizer = optim.SGD(model.parameters(), lr=0.01)"
+    "optimizer = optim.SGD(model.parameters(), lr=0.01)\n",
+    "print(optimizer)"
    ]
   },
   {
@@ -804,7 +838,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.0"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
